# degen-fund-cpmm

./: Anchor.toml  Cargo.toml  package.json  rustfmt.toml  tsconfig.json
clients/cpmm/: Cargo.toml
clients/cpmm/src/: main.rs
programs/amm/src/instructions/: initialize_amm.rs  seed_spl.rs
programs/cpmm/: Cargo.toml
programs/cpmm/src/: lib.rs
programs/cpmm/src/instructions/: initialize_cpmm.rs  mod.rs  seed_spl_t22.rs
raydium-cpmm-cpi/: Cargo.toml  README.md
raydium-cpmm-cpi/src/: lib.rs
scripts/: add_ext.ts  mint_bte.ts
tests/: degen-fund-cpmm.test.ts
tests/utils/: pda.ts
